# rust-instruction-dispatch

./: .gitattributes  .gitignore  1.75.0.md  LICENSE  README.md  run_program.sh
C/direct-call-threading/: Makefile  bytecode.h  convert.c  convert.h  direct_call_threading.c  direct_call_threading.ll  direct_call_threading.s  internal_instruction.c  internal_instruction.h  main.c
C/direct-tail-call-threading/: Makefile  bytecode.h  convert.c  direct_tail_call_threading.c  direct_tail_call_threading.ll  direct_tail_call_threading.s  internal_instruction-aarch64.s  internal_instruction-x86_64.s  internal_instruction.c  internal_instruction.h  internal_instruction.ll  main.c
C/direct-threading/: Makefile  bytecode-aarch64.s  bytecode-x86_64.s  bytecode.c  bytecode.h  bytecode.ll  direct_threading.c  direct_threading.ll  direct_threading.s  main.c
C/optimized-direct-threading/: Makefile  optimized_direct_threading.c
C/optimized_direct_threading/: Makefile  bytecode.c  bytecode.h  main.c
C/switch-dispatch/: Makefile  bytecode.c  bytecode.h  bytecode.ll  main.c  switch_dispatch.c  switch_dispatch.ll  switch_dispatch.s
Rust/direct-call-threading/: Cargo.toml  mylib.ll  mylib.s
Rust/direct-call-threading/benches/: benchmark.rs
Rust/direct-call-threading/src/: bytecode.rs  convert.rs  internal_instruction.rs  main.rs
Rust/direct-tail-call-threading/: Cargo.toml  direct_tail_call_threading-aarch64.s  direct_tail_call_threading-x86_64.s  direct_tail_call_threading.ll  (+2 more)
Rust/direct-threading/: Cargo.toml  mylib.ll  mylib.s
Rust/direct-threading/src/: bytecode.rs
(+19 files in other folders)
