[package]
name = "direct-call-threading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "mylib"
path = "src/lib.rs"

[dependencies]
once_cell = "1.17.0"

[features]
default = ["unchecked_memory"]
unchecked_memory = []

