[package]
name = "direct-call-threading"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "mylib"
path = "src/lib.rs"

[features]
default = ["unchecked_memory"]
unchecked_memory = []

[dependencies]
once_cell = "1.17.1"
