[package]
name = "direct-threading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "mylib"
path = "src/lib.rs"

[profile.release]
opt-level = 0
